# fletcher-oc-accel

./: .gitmodules  README.md  azure-pipelines.yml
.hdl_checker/: cache.json  modelsim.ini
.hdl_checker/default_library/: _info  _lib.qdb  _lib1_2.qdb  _lib1_2.qpg  _lib1_2.qtl
.hdl_checker/work/: _info
examples/stringwrite/: Makefile
examples/stringwrite/hw/: .gitignore  action_wrapper.vhd
examples/stringwrite/sw/: .gitignore  snap_stringwrite.c  snap_stringwrite.h
examples/sum/: Makefile
examples/sum/hw/: .gitignore  Makefile  action_config.sh  action_fletcher.vhd_source
examples/sum/sw/: Makefile
examples/tpch1/: Makefile
examples/tpch1/hw/: Makefile  action_config.sh  action_fletcher.vhd  tpch1  xvhdl.pb
examples/tpch1/hw/work/: _info  _lib.qdb  _lib1_0.qdb  _lib1_0.qtl  _lib1_1.qdb  _lib1_1.qpg  _lib1_1.qtl
examples/tpch1/hw/xsim.dir/work/: action_types.vdb  axi_pkg.vdb  forecast_pkg.vdb  work.rlx
examples/tpch1/ip/: create_action_ip.tcl
examples/tpch1/sw/: Makefile  RUN
runtime/: CMakeLists.txt
runtime/src/: fletcher_oc_accel.h  fletcher_snap.c  fletcher_snap.h
